# pcnn_simple

./: .gitignore  CMakeLists.txt  README.md  do_hough_on_pcnn_edges.py  eval_multiple.py  make_montages.py
include/: Line_detector.h  kmeans.h  network.h  pcnn.h  pcnn_simple.h
src/: Line_detector.cpp  kmeans.cpp  line_segmentation.cpp  main.cpp  network.cpp  pcnn.cpp  pcnn_simple.cpp
src/kht_sandbox/matlab/: kht_wrapper.mexa64  main_madratman.m
src/kht_sandbox/matlab/best_kmeans/: best_kmeans.m  license.txt
